<resources>
    <string name="app_name">TabataTimer</string>
    <string name="repetitions">Круг</string>
    <string name="residue">Осталось</string>
    <string name="approach">Подход</string>
    <string name="start">Старт</string>
    <string name="pause">Пауза</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="reset">Сброс</string>
    <string name="digits">0123456789qwertzuiopasdfghjklyxcvbnmQWERTZUIOPASDFGHJKLYXCVBNM абвгдеёжзийклмнопрстуфхцчшщьъыэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЬЪЫЭЮЯ</string>
    <string name="title_activity_change_timer">ChangeTimerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>