<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/background">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:titleTextColor="@color/black">
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@color/black"/>
        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:src="@drawable/settings"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="8dp"
            android:onClick="list_of_ex"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/repetitions"
            android:textColor="@color/letters"
            android:textAlignment="center"
            android:textSize="18sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/residue"
            android:textColor="@color/letters"
            android:textAlignment="center"
            android:textSize="18sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/approach"
            android:textColor="@color/letters"
            android:textAlignment="center"
            android:textSize="18sp"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/repetitions"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="-/-"
            android:textColor="@color/characters"
            android:textAlignment="center"
            android:textSize="18sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/residue"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="--:--"
            android:textColor="@color/characters"
            android:textAlignment="center"
            android:textSize="18sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/approach"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="-/-"
            android:textColor="@color/characters"
            android:textAlignment="center"
            android:textSize="18sp"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="vertical">
        <TextView
            android:id="@+id/timer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="00:00"
            android:textSize="70sp"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/characters"/>
        <ImageView
            android:id="@+id/pikachu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:src="@drawable/pikachu"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="упражнение"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/letters"
            android:textSize="30sp"
            android:onClick="select_ex"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/start">
            <Button
                android:id="@+id/buttonStart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/start"
                android:background="@color/buttons"
                android:textColor="@color/letters"
                android:textSize="20sp"
                android:onClick="start"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/pause_reset"
            android:visibility="invisible">
            <Button
                android:id="@+id/buttonPause"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/pause"
                android:background="@color/buttons"
                android:textColor="@color/letters"
                android:textSize="20sp"
                android:onClick="pause"
                android:layout_marginRight="2dp"/>
            <Button
                android:id="@+id/buttonReset"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/reset"
                android:background="@color/buttons"
                android:textColor="@color/letters"
                android:textSize="20sp"
                android:onClick="reset"
                android:layout_marginLeft="2dp"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
